--- a/src/components/Ingredient/Ingredient.module.css
+++ b/src/components/Ingredient/Ingredient.module.css
@@ -1,34 +1,12 @@
 .ingredient {
   composes: mb-8 from '@ya.praktikum/react-developer-burger-ui-components/dist/ui/box.css';
-  composes: ml-4 from '@ya.praktikum/react-developer-burger-ui-components/dist/ui/box.css';
   display: flex;
   flex-direction: column;
   align-items: center;
   text-decoration: none;
   color: #fff;
   position: relative;
-  max-width: 272px;
-  min-height: 208px;
-}
-
-.counterContainer {
-  position: absolute;
-  top: 0;
-  right: 0;
-  border-radius: 16px;
-  background: #4c4cff;
-  min-width: 32px;
-  height: 32px;
-  display: flex;
-  align-items: center;
-}
-.counter {
-  margin: auto;
-  font-family: 'Iceland';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 28px;
-  line-height: 24px;
+  width: 272px;
 }
 
 .ingredient__text {
