add: конструктор бургера без цены

--- a/src/components/BurgerIngredients/BurgerIngredients.module.css
+++ b/src/components/BurgerIngredients/BurgerIngredients.module.css
@@ -6,7 +6,7 @@
 
 .burgerIngredients__mainText {
   composes: mt-10 from '@ya.praktikum/react-developer-burger-ui-components/dist/ui/box.css';
-  composes: mt-5 from '@ya.praktikum/react-developer-burger-ui-components/dist/ui/box.css';
+  composes: mb-5 from '@ya.praktikum/react-developer-burger-ui-components/dist/ui/box.css';
   font-family: 'Jet Brains Mono', monospace;
   font-style: normal;
   font-weight: 700;
