--- a/src/components/BurgerConstructor/BurgerConstructor.module.css
+++ b/src/components/BurgerConstructor/BurgerConstructor.module.css
@@ -15,7 +15,7 @@
   max-height: 656px;
 }
 
-.burgerConstructor__Itemslist {
+.burgerConstructor__itemsList {
   composes: custom-scroll from '@ya.praktikum/react-developer-burger-ui-components/dist/ui/common.css';
   display: flex;
   flex-direction: column;
@@ -23,14 +23,22 @@
   row-gap: 16px;
 }
 
-.burgerConstructor__Itemslist::-webkit-scrollbar {
+.burgerConstructor__itemsList::-webkit-scrollbar {
   /* scrollbar */
   /* переопределяем согласно макету фигмы */
   width: 8px;
 }
-.burgerConstructor__Itemslist::-webkit-scrollbar-thumb {
+.burgerConstructor__itemsList::-webkit-scrollbar-thumb {
   /* thumb */
   /* переопределяем согласно макету фигмы */
   border-radius: 0px;
   border: 3px solid #8585ad;
+}
+
+.burgerConstructor__order {
+  composes: mt-10 from '@ya.praktikum/react-developer-burger-ui-components/dist/ui/box.css';
+  composes: mr-2 from '@ya.praktikum/react-developer-burger-ui-components/dist/ui/box.css';
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
