--- a/src/components/BurgerElement/BurgerElement.module.css
+++ b/src/components/BurgerElement/BurgerElement.module.css
@@ -1,11 +1,11 @@
 .burgerElement {
+  composes: mr-2 from '@ya.praktikum/react-developer-burger-ui-components/dist/ui/box.css';
   display: flex;
   align-items: center;
   justify-content: flex-end;
   column-gap: 14px;
-  margin-right: 8px;
 }
 
 .burgerElement__isBun {
-  margin-right: 16px;
+  composes: mr-4 from '@ya.praktikum/react-developer-burger-ui-components/dist/ui/box.css';
 }
