--- a/src/components/AppHeader/AppHeader.module.css
+++ b/src/components/AppHeader/AppHeader.module.css
@@ -20,8 +20,6 @@
   list-style: none;
   padding: 0;
   margin: 0;
-  font-family: 'Jet Brains Mono', monospace;
-  font-weight: 400;
 }
 
 .appHeader__link {
@@ -29,6 +27,7 @@
   composes: pr-5 from '@ya.praktikum/react-developer-burger-ui-components/dist/ui/box.css';
   composes: pb-4 from '@ya.praktikum/react-developer-burger-ui-components/dist/ui/box.css';
   composes: pl-5 from '@ya.praktikum/react-developer-burger-ui-components/dist/ui/box.css';
+  composes: text_type_main-default from '@ya.praktikum/react-developer-burger-ui-components/dist/ui/common.css';
   display: flex;
   align-items: center;
   justify-content: center;
