--- a/src/components/ingredient-details/ingredient-details.module.css
+++ b/src/components/ingredient-details/ingredient-details.module.css
@@ -2,6 +2,7 @@
   composes: text_type_main-large from '@ya.praktikum/react-developer-burger-ui-components/dist/ui/common.css';
   composes: mt-10 from '@ya.praktikum/react-developer-burger-ui-components/dist/ui/box.css';
   margin-bottom: 0;
+  width: 640px;
 }
 
 .ingredientDetails__textName {
@@ -17,8 +18,9 @@
   padding: 0;
   list-style: none;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+  column-gap: 20px;
 }
 
 .ingredientDetails__element {
@@ -37,4 +39,3 @@
   composes: text_type_digits-default from '@ya.praktikum/react-developer-burger-ui-components/dist/ui/common.css';
   color: #8585ad;
 }
-
