--- a/src/components/burger-ingredients/burger-ingredients.module.css
+++ b/src/components/burger-ingredients/burger-ingredients.module.css
@@ -25,6 +25,7 @@
   padding: 0;
   margin: 0;
   overflow-y: auto;
+  scroll-behavior: smooth;
   /* рассчет высоты выполнен эмпирическим путем */
   height: calc(100vh - 300px);
 }
