add: свертать новые страницы

--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -42,6 +42,7 @@
 
 .appHeader__linkText {
   margin: 0 0 0 calc(var(--offset-base-size) * 2);
+  text-decoration: none;
 }
 
 .appHeader__linkText_type_primary {
