--- a/src/components/modal-overlay/modal-overlay.module.css
+++ b/src/components/modal-overlay/modal-overlay.module.css
@@ -1,8 +1,8 @@
 .modalOverlay {
-  visibility: visible;
-  opacity: 1;
+  visibility: hidden;
+  opacity: 0;
   z-index: 2;
-  transition: visibility 0.1s ease-in, opacity 0.1s linear;
+  animation: opacity 0.3s forwards;
   position: fixed;
   top: 0;
   left: 0;
@@ -12,4 +12,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+@keyframes opacity {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+    visibility: visible;
+  }
 }
