--- a/src/components/user-profile/style.module.css
+++ b/src/components/user-profile/style.module.css
@@ -28,6 +28,7 @@
   composes: mr-7 from '@ya.praktikum/react-developer-burger-ui-components/dist/ui/box.css';
   composes: text_type_main-default from '@ya.praktikum/react-developer-burger-ui-components/dist/ui/common.css';
   color: #4c4cff;
-  text-decoration: none;
+  text-decoration: underline;
+  cursor: pointer;
 }
 
