--- a/src/components/order-details/style.module.css
+++ b/src/components/order-details/style.module.css
@@ -1,3 +1,20 @@
+.section {
+  min-height: 718px;
+  width: 720px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.orderDetails__loding {
+  composes: text_type_digits-large from '@ya.praktikum/react-developer-burger-ui-components/dist/ui/common.css';
+  text-shadow: 0px 0px 16px rgba(51, 51, 255, 0.25),
+    0px 0px 8px rgba(51, 51, 255, 0.25), 0px 4px 32px rgba(51, 51, 255, 0.5);
+  margin-bottom: 0;
+  margin-top: 0;
+  text-align: center;
+}
+
 .orderDetails__header {
   composes: text_type_digits-large from '@ya.praktikum/react-developer-burger-ui-components/dist/ui/common.css';
   composes: mt-30 from '@ya.praktikum/react-developer-burger-ui-components/dist/ui/box.css';
