--- a/src/components/feed-details/style.module.css
+++ b/src/components/feed-details/style.module.css
@@ -4,20 +4,20 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: calc(var(--offset-base-size) * 6);
+  padding: 24px;
   width: 584px;
-  min-height: 214px;
+  /* min-height: 214px; */
   border-radius: 40px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 0px 2px rgba(0, 0, 0, 0.06),
     0px 0px 1px rgba(0, 0, 0, 0.04);
-  border: 2px dashed #4c4cff;
+  background: #1c1c21;
 }
 
 .headerContainer {
   display: flex;
   justify-content: space-between;
   width: 100%;
-  margin-top: 24px;
+  margin-bottom: 24px;
 }
 
 .orderNumber {
@@ -37,6 +37,7 @@
   width: 100%;
   color: #f2f2f3;
   margin: 0;
+  margin-bottom: calc(var(--offset-base-size) * 2);
 }
 
 .ingredients {
@@ -48,5 +49,12 @@
   justify-content: space-between;
   width: 100%;
   position: relative;
+}
+
+/* TODO: удалить */
+.test {
+  display: flex;
+  flex-direction: column;
+  row-gap: 16px;
 }
 
