add: сверстать feed

--- a/src/components/burger-constructor/style.module.css
+++ b/src/components/burger-constructor/style.module.css
@@ -1,7 +1,7 @@
 .burgerConstructor {
   composes: mt-25 from '@ya.praktikum/react-developer-burger-ui-components/dist/ui/box.css';
   padding: 0;
-  width: 600px;
+  width: 100%;
 }
 
 .burgerConstructor__list {
