--- a/src/components/card-order/style.module.css
+++ b/src/components/card-order/style.module.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: flex-start;
   padding: 24px;
-  width: 90%;
+
   border-radius: 40px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 0px 2px rgba(0, 0, 0, 0.06),
     0px 0px 1px rgba(0, 0, 0, 0.04);
@@ -94,10 +94,10 @@
   left: 0;
   right: 0;
   text-align: center;
+  color: #f2f2f3;
 }
 
 .extraImage {
-  /* background: #1c1c21; */
   opacity: 0.6;
 }
 
