--- a/src/pages/modal-order/style.module.css
+++ b/src/pages/modal-order/style.module.css
@@ -1,3 +1,10 @@
+.loading {
+  min-height: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .loadingText {
   composes: text_type_digits-large from '@ya.praktikum/react-developer-burger-ui-components/dist/ui/common.css';
   text-shadow: 0px 0px 16px rgba(51, 51, 255, 0.25),
@@ -6,3 +13,4 @@
   margin-top: 0;
   text-align: center;
 }
+
