--- a/src/pages/order/style.module.css
+++ b/src/pages/order/style.module.css
@@ -2,5 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  width: 600px;
+  margin: 0 auto;
 }
 
